# template-project

./: .gitignore  CMakeLists.txt  README.md  clean.sh  run_tests.sh
dynamiclib/: CMakeLists.txt
dynamiclib/include/: a.h
dynamiclib/src/: a.cpp
executable/: CMakeLists.txt
executable/include/: mainheader.h
executable/src/: main.cpp
framework/: CMakeLists.txt  Info.plist
framework/include/: framework.h
framework/src/: framework.cpp
graphic_exe/: CMakeLists.txt
graphic_exe/src/: main.cpp
staticlib/: CMakeLists.txt
staticlib/include/: b.h
staticlib/src/: b.cpp
tests/: CMakeLists.txt
tests/src/: tests.cpp  tests_new.cpp
